Fix icons alignment Remove temporary md files

--- a/resources/sass/themes/default/_selectionlist.scss
+++ b/resources/sass/themes/default/_selectionlist.scss
@@ -25,7 +25,7 @@
     background: transparent;
     width: 100%;
     height: 34px;
-    color: #888;
+    color: $black;
     border: none;
     outline: none;
     display: inline-block;
