--- a/resources/sass/themes/ios/_variables.scss
+++ b/resources/sass/themes/ios/_variables.scss
@@ -11,6 +11,8 @@ $m-primary-font-family: -apple-system-font, "HelveticaNeue-Light", "Helvetica Ne
 
 $lightenPercentage: 25%;
 
+$textfield-icon-y-position: 13px;
+
 $m-primary-active-color: $lightgrey;
 $m-primary-active-text-color: $darkblue;
 
